--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="hero">
       <div class="container page-hero">
         <h1 class="hero-title">Эффективное решение для вашего бизнеса</h1>
-        <button class="hero-button" type="button">Заказать услугу</button>
+        <button class="hero-button" type="button" data-modal-open>Заказать услугу</button>
       </div>
       </section>
       <section class="section">
@@ -307,6 +307,15 @@
         </ul>
       </div>
       </section>
+      <div class="backdrop is-hidden">
+        <div  class="modal" data-modal>
+          <button  class="modal-button" data-modal-close>
+            <svg class="modal-svg">
+              <use href="./images/icons/sprite.svg#icon-close" width="30" height="30"> </use>
+            </svg>
+          </button>
+        </div>
+      </div>
     </main>
       <footer class="footer">
         <div class=" footer-info container">
@@ -355,5 +364,6 @@
         </address>
       </div>
       </footer>
+      <script src="./js/modal.js"></script>
   </body>
 </html>
