--- a/portfolio.html
+++ b/portfolio.html
@@ -49,66 +49,84 @@
           </ul>
             <ul class="filter-list">
                 <li class="container-set">
+                  <a class="card-set-link" href="">
                   <img src="images/portfolio/laptop.jpg" width="370" height="294" alt="">
                   <div class="set-items">
                   <h3 class="title-filter">Технокряк</h3>
                   <p >Веб-сайт</p>
+                </a>
                 </div>
                 </li>
                 <li class="container-set">
+                  <a class="card-set-link" href="">
                    <img src="images/portfolio/players.jpg" width="370" height="294" alt="">
                    <div class="set-items">
                    <h3 class="title-filter">Постер New Orlean vs Golden Star</h3>
                    <p>Дизайн</p>
+                  </a>
                   </div>
                 </li>
                 <li class="container-set">
+                  <a class="card-set-link" href="">
                    <img src="images/portfolio/seafood.jpg" width="370" height="294" alt="">
                    <div class="set-items">
                    <h3 class="title-filter">Ресторан Seafood</h3>
                    <p>Приложение</p>
+                  </a>
                   </div>
                 </li>
                 <li class="container-set">
+                  <a class="card-set-link" href="">
                    <img src="images/portfolio/headphones.jpg" width="370" height="294" alt="">
                    <div class="set-items">
                    <h3 class="title-filter">Проект Prime</h3>
                   <p>Маркетинг</p>
+                </a>
                 </div>
                 </li>
                 <li class="container-set">
+                  <a class="card-set-link" href="">
                     <img src="images/portfolio/boxes.jpg" width="370" height="294" alt="">
                     <div class="set-items">
                     <h3 class="title-filter">Проект Boxes</h3>
                     <p>Маркетинг</p>
+                  </a>
                   </div>
                   </li>
                 <li class="container-set">
+                  <a class="card-set-link" href="">
                     <img src="images/portfolio/computer.jpg" width="370" height="294" alt="">
                     <div class="set-items">
                     <h3 class="title-filter">Inspiration has no Borders</h3>
                     <p>Веб-сайт</p>
+                  </a>
                   </div>
                 </li>
                 <li class="container-set">
+                  <a class="card-set-link" href="">
                     <img src="images/portfolio/magazine.jpg" width="370" height="294" alt="">
                     <div class="set-items">
                     <h3 class="title-filter">Издание Limited Edition</h3>
                     <p>Дизайн</p>
+                  </a>
                   </div>
                 </li>
                 <li class="container-set">
+                  <a class="card-set-link" href="">
                     <img src="images/portfolio/birka.jpg" width="370" height="294" alt="">
                     <div class="set-items">
                     <h3 class="title-filter">Проект LAB</h3>
                     <p>Маркетинг</p>
+                  </a>
                   </div>
                 </li>
                 <li class="container-set">
+                  <a class="card-set-link" href="">
                     <img src="images/portfolio/handsinlaptop.jpg" width="370" height="294" alt="">
                     <div class="set-items">
                     <h3 class="title-filter">Growing Business</h3>
                     <p>Приложение</p>
+                  </a>
                   </div>
                 </li>
               </ul>
