--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       </nav>
         <ul class="header-contacts adress-list">
           <li class="item contacts-item"><a href="" class="contacts address-link">
-            <svg class="adress-icon">
+            <svg class="adress-icon" width="16" height="12">
               <use href="./images/icons/sprite.svg#icon-email"></use>
             </svg>
             info@devstudio.com
           </a></li>
           <li class="item contacts-item"><a href="" class="contacts address-link">
-            <svg class="adress-icon phone">
+            <svg class="adress-icon phone"  width="10" height="16">
               <use href="./images/icons/sprite.svg#icon-phone"></use>
             </svg>
             +38  096  111  11  11
