--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,9 @@
     <nav class="main-nav">
       <a class='logo' href="index.html"><span class="logo-color">Web</span>Studio</a>
       <ul class="header-links">
-        <li class="item"><a href="index.html" class="header-link">Студия</a></li>
-        <li class="item"><a href="portfolio.html" class="header-link">Портфолио</a></li>
-        <li class="item"><a href="" class="header-link">Контакты</a></li>
+        <li class="item"><a href="index.html" class="header-link menu-link">Студия</a></li>
+        <li class="item"><a href="portfolio.html" class="header-link menu-link">Портфолио</a></li>
+        <li class="item"><a href="" class="header-link menu-link">Контакты</a></li>
       </ul>
     </nav>
     <ul class="header-contacts adress-list">
