--- a/portfolio.html
+++ b/portfolio.html
@@ -50,29 +50,47 @@
             <ul class="filter-list">
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
-                  <img src="images/portfolio/laptop.jpg" width="370" height="294" alt="">
+                    <div>
+                    <img src="images/portfolio/laptop.jpg" width="370" height="294" alt="">
+                    <div class="card-set-overlay">
+                      <p>Технокряк это современная площадка 
+                        распространения коронавируса.
+                         Компании используют эту платформу 
+                         для цифрового шпионажа и атак на 
+                         защищённые сервера конкурентов.
+                      </p>
+                    </div>
+                    </div>
                   <div class="set-items">
                   <h3 class="title-filter">Технокряк</h3>
                   <p >Веб-сайт</p>
                 </div>
-                <div class="card-set-overlay">
-                    <p>Технокряк это современная площадка 
-                      распространения коронавируса.
-                       Компании используют эту платформу 
-                       для цифрового шпионажа и атак на 
-                       защищённые сервера конкурентов.
-                    </p>
-                  </div>
                </a>
                 </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
-                   <img src="images/portfolio/players.jpg" width="370" height="294" alt="">
+                   <div>
+                    <img src="images/portfolio/players.jpg" width="370" height="294" alt="">
+                    <div class="card-set-overlay">
+                      <p>Технокряк это современная площадка 
+                        распространения коронавируса.
+                         Компании используют эту платформу 
+                         для цифрового шпионажа и атак на 
+                         защищённые сервера конкурентов.
+                      </p>
+                    </div>
+                  </div>
                    <div class="set-items">
                    <h3 class="title-filter">Постер New Orlean vs Golden Star</h3>
                    <p>Дизайн</p>
                   </div>
-                  <div class="card-set-overlay">
+                </a>
+                </li>
+                <li class="container-set">
+                  <a class="overlay-link card-set-link" href="">
+                  <div>
+                   <img src="images/portfolio/seafood.jpg" width="370" height="294" alt="">
+                   <div class="card-set-overlay">
                     <p>Технокряк это современная площадка 
                       распространения коронавируса.
                        Компании используют эту платформу 
@@ -80,16 +98,18 @@
                        защищённые сервера конкурентов.
                     </p>
                   </div>
-                </a>
-                </li>
-                <li class="container-set">
-                  <a class="overlay-link card-set-link" href="">
-                   <img src="images/portfolio/seafood.jpg" width="370" height="294" alt="">
+                  </div>
                    <div class="set-items">
                    <h3 class="title-filter">Ресторан Seafood</h3>
                    <p>Приложение</p>
                   </div>
-                  <div class="card-set-overlay">
+                </a>
+                </li>
+                <li class="container-set">
+                  <a class="overlay-link card-set-link" href="">
+                    <div>
+                   <img src="images/portfolio/headphones.jpg" width="370" height="294" alt="">
+                   <div class="card-set-overlay">
                     <p>Технокряк это современная площадка 
                       распространения коронавируса.
                        Компании используют эту платформу 
@@ -97,107 +117,105 @@
                        защищённые сервера конкурентов.
                     </p>
                   </div>
-                </a>
-                </li>
-                <li class="container-set">
-                  <a class="overlay-link card-set-link" href="">
-                   <img src="images/portfolio/headphones.jpg" width="370" height="294" alt="">
+                    </div>
                    <div class="set-items">
                    <h3 class="title-filter">Проект Prime</h3> 
                   <p>Маркетинг</p>
-                </div>
-                <div class="card-set-overlay">
-                  <p>Технокряк это современная площадка 
-                    распространения коронавируса.
-                     Компании используют эту платформу 
-                     для цифрового шпионажа и атак на 
-                     защищённые сервера конкурентов.
-                  </p>
                 </div>
               </a>
                 </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
+                    <div>
                     <img src="images/portfolio/boxes.jpg" width="370" height="294" alt="">
+                    <div class="card-set-overlay">
+                      <p>Технокряк это современная площадка 
+                        распространения коронавируса.
+                         Компании используют эту платформу 
+                         для цифрового шпионажа и атак на 
+                         защищённые сервера конкурентов.
+                      </p>
+                    </div>
+                    </div>
                     <div class="set-items">
                     <h3 class="title-filter">Проект Boxes</h3>
                     <p>Маркетинг</p>
-                  </div>
-                  <div class="card-set-overlay">
-                    <p>Технокряк это современная площадка 
-                      распространения коронавируса.
-                       Компании используют эту платформу 
-                       для цифрового шпионажа и атак на 
-                       защищённые сервера конкурентов.
-                    </p>
                   </div>
                 </a>
                   </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
+                    <div>
                     <img src="images/portfolio/computer.jpg" width="370" height="294" alt="">
+                    <div class="card-set-overlay">
+                      <p>Технокряк это современная площадка 
+                        распространения коронавируса.
+                         Компании используют эту платформу 
+                         для цифрового шпионажа и атак на 
+                         защищённые сервера конкурентов.
+                      </p>
+                    </div>
+                    </div>
                     <div class="set-items">
                     <h3 class="title-filter">Inspiration has no Borders</h3>
                     <p>Веб-сайт</p>
                   </div>
-                  <div class="card-set-overlay">
-                    <p>Технокряк это современная площадка 
-                      распространения коронавируса.
-                       Компании используют эту платформу 
-                       для цифрового шпионажа и атак на 
-                       защищённые сервера конкурентов.
-                    </p>
-                  </div>
                 </a>
                 </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
+                    <div>
                     <img src="images/portfolio/magazine.jpg" width="370" height="294" alt="">
+                    <div class="card-set-overlay">
+                      <p>Технокряк это современная площадка 
+                        распространения коронавируса.
+                         Компании используют эту платформу 
+                         для цифрового шпионажа и атак на 
+                         защищённые сервера конкурентов.
+                      </p>
+                    </div>
+                    </div>
                     <div class="set-items">
                     <h3 class="title-filter">Издание Limited Edition</h3>
                     <p>Дизайн</p>
                   </div>
-                  <div class="card-set-overlay">
-                    <p>Технокряк это современная площадка 
-                      распространения коронавируса.
-                       Компании используют эту платформу 
-                       для цифрового шпионажа и атак на 
-                       защищённые сервера конкурентов.
-                    </p>
-                  </div>
                 </a>
                 </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
+                    <div>
                     <img src="images/portfolio/birka.jpg" width="370" height="294" alt="">
+                    <div class="card-set-overlay">
+                      <p>Технокряк это современная площадка 
+                        распространения коронавируса.
+                         Компании используют эту платформу 
+                         для цифрового шпионажа и атак на 
+                         защищённые сервера конкурентов.
+                      </p>
+                    </div>
+                    </div>
                     <div class="set-items">
                     <h3 class="title-filter">Проект LAB</h3>
                     <p>Маркетинг</p>
                   </div>
-                  <div class="card-set-overlay">
-                    <p>Технокряк это современная площадка 
-                      распространения коронавируса.
-                       Компании используют эту платформу 
-                       для цифрового шпионажа и атак на 
-                       защищённые сервера конкурентов.
-                    </p>
-                  </div>
                 </a>
                 </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
+                    <div>
                     <img src="images/portfolio/handsinlaptop.jpg" width="370" height="294" alt="">
+                    <div class="card-set-overlay">
+                      <p>Технокряк это современная площадка 
+                        распространения коронавируса.
+                         Компании используют эту платформу 
+                         для цифрового шпионажа и атак на 
+                         защищённые сервера конкурентов.
+                      </p>
+                    </div>
+                    </div>
                     <div class="set-items">
                     <h3 class="title-filter">Growing Business</h3>
                     <p>Приложение</p>
-                  </div>
-                  <div class="card-set-overlay">
-                    <p>Технокряк это современная площадка 
-                      распространения коронавируса.
-                       Компании используют эту платформу 
-                       для цифрового шпионажа и атак на 
-                       защищённые сервера конкурентов.
-                    </p>
                   </div>
                 </a>
                 </li>
