--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
             <ul class="filter-list">
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
-                    <div>
+                    <div class="thumb-overlay">
                     <img src="images/portfolio/laptop.jpg" width="370" height="294" alt="">
                     <div class="card-set-overlay">
                       <p>Технокряк это современная площадка 
@@ -69,7 +69,7 @@
                 </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
-                   <div>
+                   <div class="thumb-overlay">
                     <img src="images/portfolio/players.jpg" width="370" height="294" alt="">
                     <div class="card-set-overlay">
                       <p>Технокряк это современная площадка 
@@ -88,7 +88,7 @@
                 </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
-                  <div>
+                  <div class="thumb-overlay">
                    <img src="images/portfolio/seafood.jpg" width="370" height="294" alt="">
                    <div class="card-set-overlay">
                     <p>Технокряк это современная площадка 
@@ -107,7 +107,7 @@
                 </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
-                    <div>
+                    <div class="thumb-overlay">
                    <img src="images/portfolio/headphones.jpg" width="370" height="294" alt="">
                    <div class="card-set-overlay">
                     <p>Технокряк это современная площадка 
@@ -126,7 +126,7 @@
                 </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
-                    <div>
+                    <div class="thumb-overlay">
                     <img src="images/portfolio/boxes.jpg" width="370" height="294" alt="">
                     <div class="card-set-overlay">
                       <p>Технокряк это современная площадка 
@@ -145,7 +145,7 @@
                   </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
-                    <div>
+                    <div class="thumb-overlay">
                     <img src="images/portfolio/computer.jpg" width="370" height="294" alt="">
                     <div class="card-set-overlay">
                       <p>Технокряк это современная площадка 
@@ -164,7 +164,7 @@
                 </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
-                    <div>
+                    <div class="thumb-overlay">
                     <img src="images/portfolio/magazine.jpg" width="370" height="294" alt="">
                     <div class="card-set-overlay">
                       <p>Технокряк это современная площадка 
@@ -183,7 +183,7 @@
                 </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
-                    <div>
+                    <div class="thumb-overlay">
                     <img src="images/portfolio/birka.jpg" width="370" height="294" alt="">
                     <div class="card-set-overlay">
                       <p>Технокряк это современная площадка 
@@ -202,7 +202,7 @@
                 </li>
                 <li class="container-set">
                   <a class="overlay-link card-set-link" href="">
-                    <div>
+                    <div class="thumb-overlay">
                     <img src="images/portfolio/handsinlaptop.jpg" width="370" height="294" alt="">
                     <div class="card-set-overlay">
                       <p>Технокряк это современная площадка 
